--- a/Jeopardy-Multiplayer/src/App.css
+++ b/Jeopardy-Multiplayer/src/App.css
@@ -1,6 +1,12 @@
 #root {
-  max-width: 1280px;
+  max-width: 100%;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
+}
+
+body {
+  max-width: 100%;
+  margin: 0 auto;
+  display: block;
+  background-color: #FEFAE0;
 }
