--- a/Jeopardy-Multiplayer/src/App.css
+++ b/Jeopardy-Multiplayer/src/App.css
@@ -1,12 +1,11 @@
 #root {
   max-width: 100%;
-  margin: 0 auto;
+  min-height: 100vh;
   text-align: center;
 }
 
 body {
   max-width: 100%;
   margin: 0 auto;
-  display: block;
   background-color: #FEFAE0;
 }
