--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,16 +1,29 @@
 #root {
-  max-width: 100%;
-  min-height: 100vh;
+  margin: 0;
+  padding: 0;
   text-align: center;
 }
 
+html {
+  height: 100%;
+}
+
 body {
-  max-width: 100%;
-  margin: 0 auto;
+  margin: 0;
+  padding: 0;
+  min-height: 100vh;
+  /* max-width: 100%;
+  margin: 0 auto; */
   background-color: #FEFAE0;
+  line-height: 1.5;
 }
 
 .gameContainer {
   width: 100%;
   height: 100vh;
 }
+
+/* .wrapper {
+  max-width: 100%;
+  min-height: 100vh;
+} */
