--- a/client/src/components/footer/footer.css
+++ b/client/src/components/footer/footer.css
@@ -1,4 +1,9 @@
 footer {
-    padding: 20px;
-    background-color: #B99470;
+    position: fixed;
+    padding: 10px 10px 0px 10px;
+    bottom: 0;
+    width: 100%;
+    height: 35px;
+    background: #B99470;
+    color: #000;
 }
