--- a/client/src/components/home/home.css
+++ b/client/src/components/home/home.css
@@ -32,6 +32,7 @@ main {
     width: 250px;
     height: 100px;
     margin-top: 90px;
+    margin-bottom: 70px;
     background-color: #A6B37D;
     text-transform: uppercase;
 }
