--- a/client/src/components/game/playGame/categories/categories.css
+++ b/client/src/components/game/playGame/categories/categories.css
@@ -1,9 +1,70 @@
+.category-model {
+    width: 28%;
+    height: 100px;
+    float: left;
+    margin: 1% 10%;
+    border: 10px solid;
+    border-radius: 10px;
+}
+
+.player-categories {
+    margin: 20px auto;
+    padding: 10px;
+    width: 30%;
+    text-transform: uppercase;
+    font-weight: bold;
+    border-radius: 10px;
+}
+
+.category-model>* {
+    width: 100%;
+}
+
+.category-model select {
+    height: 70%;
+    text-align: center;
+    font-weight: bold;
+    border: none;
+    background-color: rgba(172, 255, 47, 0.066);
+    appearance: none;
+}
+
+.category-model select:hover{
+    cursor: pointer;
+}
+
+.category-model button {
+    height: 30%;
+    background-color: greenyellow;
+    border: none;
+}
+
+.category-model button:enabled {
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.category-model p {
+    line-height: 3.5;
+}
+
+.chosen-category {
+    background-color: #C0C78C;
+    border-color: #A6B37D;
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: large;
+}
+
 .activeCat {
-    background-color: green;
+    background-color: rgba(0, 128, 0, 0.089);
+    border-color: green;
 }
 
 .inactiveCat {
-    background-color: red;
+    background-color: rgba(255, 0, 0, 0.1);
+    border-color: red;
 }
 
 .no-access {
