--- a/client/src/components/game/playGame/chooseQuestion/chooseQuestion.css
+++ b/client/src/components/game/playGame/chooseQuestion/chooseQuestion.css
@@ -1,8 +1,8 @@
 .category-box, .question-box {
-    width: 18.4%;
+    width: 18.1%;
     float: left;
     margin: 1% 3%;
-    font-size: x-large;
+    font-size: large;
     font-weight: bold;
     text-transform: uppercase;
     border: 5px solid;
@@ -10,17 +10,17 @@
 }
 
 .category-box {
-    height: 70px;
+    height: 40px;
     margin-bottom: 20px;
-    line-height: 3;
+    line-height: 2.3;
     background-color: #C0C78C;
     border-color: #A6B37D;
     color: #fff;
 }
 
 .question-box {
-    height: 50px;
-    line-height: 2;
+    height: 30px;
+    line-height: 1.8;
     background-color: greenyellow;
     border-color: green;
     color: #000;
