--- a/client/src/components/authentication/authentication.css
+++ b/client/src/components/authentication/authentication.css
@@ -18,24 +18,25 @@
     background-color: #C0C78C;
 }
 
-.authentication-input, .authentication-form button {
+.authentication-input, .authentication-form-button {
     width: 500px;
     margin: 15px auto;
     padding: 10px;
     font-size: 18px;
 }
 
-.authentication-form button, .authentication h1 {
+.authentication-form-button, .authentication h1 {
     text-transform: uppercase;
     margin: auto;
 }
 
-.authentication-form button {
+.authentication-form-button {
     margin-top: 15px;
     width: 525px;
 }
 
-.authentication-form button:hover {
+.authentication-form-button:hover {
+    cursor: pointer;
     color: white;
     background-color: black;
 }
