--- a/client/src/components/game/playGame/chooseQuestion/chooseQuestion.css
+++ b/client/src/components/game/playGame/chooseQuestion/chooseQuestion.css
@@ -5,7 +5,7 @@
     font-size: large;
     font-weight: bold;
     text-transform: uppercase;
-    border: 5px solid;
+    border: 2px solid;
     border-radius: 10px;
 }
 
@@ -26,7 +26,7 @@
     color: #000;
 }
 
-.question-box:hover {
+.active-box:hover {
     cursor: pointer;
     color: #fff;
     border-color: greenyellow;
