--- a/client/src/components/home/home.css
+++ b/client/src/components/home/home.css
@@ -11,7 +11,6 @@ main {
 .leaderboards div p {
     width: 60%;
     margin: 0 auto;
-    padding: 10px 0;
     background-color: #A6B37D;
     text-transform: uppercase;
 }
@@ -22,17 +21,44 @@ main {
     margin: 0 auto;
     padding: 0;
     background-color: #C0C78C;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+
+.leaderboard-all-time p {
+    padding: 10px 0;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
 }
 
 .leaderboards div ul li {
     list-style-type: none;
 }
 
-.play-button button{
-    width: 250px;
-    height: 100px;
-    margin-top: 90px;
-    margin-bottom: 70px;
+.points-play p {
+    height: 130px;
+    line-height: 130px;
+    font-size: x-large;
+    border-radius: 5px;
+    letter-spacing: 1.5px;
+    color: #fff;
+}
+
+.play-button {
+    width: 60%;
+    height: 130px;
+    margin-top: 80px;
+    color: #fff;
     background-color: #A6B37D;
     text-transform: uppercase;
+    font-size: x-large;
+    letter-spacing: 1.5px;
+    border-radius: 5px;
+    border: none;
+}
+
+.play-button:hover {
+    cursor: pointer;
+    font-size: xx-large;
+    background-color: yellowgreen;
 }
