useCreateCategory hook: 1) sets a question model depending on points; 2) when a request error occurs, moveToNextPage and recordCategoryAndQuestions states change

--- a/client/src/components/create/create.css
+++ b/client/src/components/create/create.css
@@ -89,3 +89,11 @@
     min-height: 50px;
     max-height: 150px;
 }
+
+.loading-wrapper {
+    width: 100%;
+}
+
+.loader {
+    margin: 150px 50%;
+}
