--- a/client/src/components/game/joinGame/joinGame.css
+++ b/client/src/components/game/joinGame/joinGame.css
@@ -6,7 +6,6 @@
 
 .start-game-heading, .start-game-rival-player, .start-game-button {
     padding: 0 10px;
-    width: 100%;
     height: 50px;
     font-size: large;
     letter-spacing: 1px;
@@ -15,18 +14,20 @@
 
 .start-game-heading {
     margin-bottom: 60px;
+    width: 100%;
     font-size: xx-large;
-    color: #fff;
-    background-color: #C0C78C;
+    text-transform: uppercase;
+    color: #000;
 }
 
 .start-game-rival-player {
+    width: 80%;
     text-align: center;
     margin-bottom: 30px;
 }
 
 .start-game-button {
-    width: 105%;
+    width: 85%;
     color: #fff;
     background-color: #C0C78C;
     border: none;
